mediflow_HMS/deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediflow-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  rules:
    - host: mediflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediflow-web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mediflow-api
                port:
                  number: 8080
          - path: /hubs
            pathType: Prefix
            backend:
              service:
                name: mediflow-api
                port:
                  number: 8080
